# ecology-extras

./: .gitmodules  .travis.yml  README.md  README.md.template
ecology-ci-pipelines/: ecology-ci-pipelines.cabal  ecology-ci-pipelines.lock-8.2.2  ecology-ci-pipelines.lock-8.4.4
ecology-ci-pipelines/src/Irreverent/Ecology/CI/: BitbucketPipelines.hs
ecology-git-bitbucket/: ecology-git-bitbucket.cabal  ecology-git-bitbucket.lock-8.2.2  ecology-git-bitbucket.lock-8.4.4
ecology-git-bitbucket/src/Irreverent/Ecology/Git/: Bitbucket.hs
ecology-git-github/: README.md  ecology-git-github.cabal  ecology-git-github.lock-8.2.2  ecology-git-github.lock-8.4.4
ecology-git-github/src/Irreverent/Ecology/Git/: GitHub.hs
ecology-github-optparse/: ecology-github-optparse.cabal  ecology-github-optparse.lock-8.2.2  ecology-github-optparse.lock-8.4.4
ecology-github-optparse/src/Irreverent/Ecology/GitHub/: Options.hs
ecology-im-slack/: ecology-im-slack.cabal  ecology-im-slack.lock-8.2.2  ecology-im-slack.lock-8.4.4
ecology-im-slack/src/Irreverent/Ecology/IM/: Slack.hs
template-files/: README.md.template  ci.common.template
