name:               irreverent-ecology-ci-pipelines
version:            0.0.1
license:            BSD3
author:             Dom De Re
maintainer:         Dom De Re
copyright:          Copyright (C) 2018 Irreverent Pixel Feats
synopsis:           Functions to help write a CI API implementation using bitbucket pipelines
category:           Data
description:        Functions to help write a CI API implementation using bitbucket pipelines
homepage:           https://github.com/irreverent-pixel-feats/ecology-extras
bug-reports:        https://github.com/irreverent-pixel-feats/ecology-extras/issues
cabal-version:      >= 1.18
build-type:         Simple

source-repository       head
    type:               git
    location:           https://github.com/irreverent-pixel-feats/ecology-extras.git

flag                    small_base
    description:        Choose the new, split-up base package.

library
    default-language:   Haskell2010

    build-depends:      array
                      , base < 5 && >= 4
                      , bytestring              == 0.10.*
                      , containers
                      , cryptonite              == 0.25.*
                      , domdere-preamble
                      , irreverent-bitbucket-core
                      , irreverent-bitbucket-http-client
                      , irreverent-ecology-api
                      , irreverent-ecology-core
                      , neat-interpolation      == 0.3.*
                      , ultra-either
                      , ultra-exceptions
                      , ultra-io
                      , ultra-text
                      , ultra-unordered-containers
                      , validation              == 1.*
                      , wreq                    == 0.5.*

    ghc-options:        -Wall

    hs-source-dirs:     src

    exposed-modules:    Irreverent.Ecology.CI.BitbucketPipelines

test-suite              test
    default-language:   Haskell2010
    type:               exitcode-stdio-1.0
    main-is:            test.hs
    hs-source-dirs:     test
    build-depends:      base                >= 4 && < 5
                    ,   lab-hedgehog-core
                    ,   domdere-preamble
                    ,   irreverent-ecology-ci-pipelines
