name:               irreverent-ecology-github-optparse
version:            0.0.1
license:            BSD3
author:             Dom De Re
maintainer:         Dom De Re
copyright:          Copyright (C) 2018 Irreverent Pixel Feats
synopsis:           Command line option parsers for GitHub stuff
category:           Data
description:        Command line option parsers for GitHub stuff
homepage:           https://github.com/irreverent-pixel-feats/ecology-irreverent
bug-reports:        https://github.com/irreverent-pixel-feats/ecology-irreverent/issues
cabal-version:      >= 1.18
build-type:         Simple

source-repository       head
    type:               git
    location:           https://github.com/irreverent-pixel-feats/ecology-irreverent.git

flag                    small_base
    description:        Choose the new, split-up base package.

library
    default-language:   Haskell2010

    build-depends:      array
                      , base < 5 && >= 4
                      , bytestring              == 0.10.*
                      , containers
                      , domdere-preamble
                      , github                  == 0.19.*
                      , ultra-either
                      , ultra-optparse
                      , ultra-text

    ghc-options:        -Wall

    hs-source-dirs:     src

    exposed-modules:    Irreverent.Ecology.GitHub.Options

test-suite              test
    default-language:   Haskell2010
    type:               exitcode-stdio-1.0
    main-is:            test.hs
    hs-source-dirs:     test
    build-depends:      base                >= 4 && < 5
                    ,   lab-core
                    ,   domdere-preamble
                    ,   irreverent-ecology-github-optparse
